--- a/Visuals/templates/index.html
+++ b/Visuals/templates/index.html
@@ -13,8 +13,8 @@
     <title>Olsker Cupcakes</title>
 
     <!-- Icon -->
-    <link rel="icon" href="../static/images/icons/icon.svg" type="image/x-icon"> <!-- That little logo thats next to the title in URL -->
-    <link rel="apple-touch-icon" href="../static/images/icons/icon.svg">
+    <link rel="icon" href="../static/images/icons/cupcake-1.png" type="image/x-icon"> <!-- That little logo thats next to the title in URL -->
+    <link rel="apple-touch-icon" href="../static/images/icons/cupcake-1.png">
 
     <!-- CSS Load -->
     <link rel="stylesheet" href="../static/css/style.css">
@@ -62,13 +62,13 @@
             <div class="guac-row">
       
                 <div class="guac-col-auto index-cupcake-1 guac-animate guac-slide-left">
-                    <img src="../static/images/page-content/index/cupcake-3.png" alt="Billede 1">
+                    <img src="../static/images/products/cupcake-19.png" alt="Billede 1">
                 </div>
                 <div class="guac-col-auto index-cupcake-2 guac-animate guac-slide-up">
-                    <img src="../static/images/page-content/index/cupcake-3.png" alt="Billede 2">
+                    <img src="../static/images/products/cupcake-3.png" alt="Billede 2">
                 </div>
                 <div class="guac-col-auto index-cupcake-3 guac-animate guac-slide-in-right">
-                    <img src="../static/images/page-content/index/cupcake-3.png" alt="Billede 3">
+                    <img src="../static/images/products/cupcake-16.png" alt="Billede 3">
                 </div>
                 
             </div>
@@ -100,17 +100,17 @@
             <!-- Cupcake Showcase Start -->
             <div class="section-1-showcase guac-animate guac-zoom-in">
                 <div class="guac-col-auto showcase-item guac-animate guac-zoom-in-n-out1">
-                    <img src="../static/images/page-content/index/cupcake-3.png" alt="Showcase 1">
+                    <img src="../static/images/products/cupcake-2.png" alt="Showcase 1">
                     <h3>Honeybun Cherry</h3>
                     <p>Rig chokoladesmag med cremet topping og ekstra kærlighed.</p>
                 </div>
                 <div class="guac-col-auto showcase-item guac-animate guac-zoom-in-n-out2">
-                    <img src="../static/images/page-content/index/cupcake-3.png" alt="Showcase 2">
+                    <img src="../static/images/products/cupcake-3.png" alt="Showcase 2">
                     <h3>Rød Top</h3>
                     <p>Friske bær og en let, luftig lyserød frosting og et lille kirsebær til at slutte af på.</p>
                 </div>
                 <div class="guac-col-auto showcase-item guac-animate guac-zoom-in-n-out3">
-                    <img src="../static/images/page-content/index/cupcake-3.png" alt="Showcase 3">
+                    <img src="../static/images/products/cupcake-11.png" alt="Showcase 3">
                     <h3>Karamel Nigrini</h3>
                     <p>Soft caramel pudding center med græskar frosting og et lille twist af hindbær.</p>
                 </div>
