--- a/Visuals/templates/order.html
+++ b/Visuals/templates/order.html
@@ -13,8 +13,8 @@
     <title>Olsker Cupcakes</title>
 
     <!-- Icon -->
-    <link rel="icon" href="../static/images/icons/icon.svg" type="image/x-icon"> <!-- That little logo thats next to the title in URL -->
-    <link rel="apple-touch-icon" href="../static/images/icons/icon.svg">
+    <link rel="icon" href="../static/images/icons/cupcake-1.png" type="image/x-icon"> <!-- That little logo thats next to the title in URL -->
+    <link rel="apple-touch-icon" href="../static/images/icons/cupcake-1.png">
 
     <!-- CSS Load -->
     <link rel="stylesheet" href="../static/css/style.css">
@@ -133,8 +133,8 @@
                             <h2>Jordbær Cupcake</h2>
                             <div class="cupcake-hoverContent">
                             <p class="cupcake-desc guac-pt-3">Beskrivelse her broski lol.. Hader livet.</p>
-                            <p class="cupcake-price guac-pt-3">Pris: 25 kr.</p>
-                            <a href="#" class="add-product">Bestil</a>
+                            <p class="cupcake-price guac-pt-3">25 kr</p>
+                            <a href="#" class="add-product">Tilføj til kurv</a>
                             </div>
                         </div>
                     </div>
@@ -147,22 +147,22 @@
                             <h2>Vanilje Cupcake</h2>
                             <div class="cupcake-hoverContent">
                             <p class="cupcake-desc guac-pt-3">Beskrivelse her broski lol.. Hader livet.</p>
-                            <p class="cupcake-price guac-pt-3">Pris: 25 kr.</p>
-                            <a href="#" class="add-product">Bestil</a>
+                            <p class="cupcake-price guac-pt-3">25 kr</p>
+                            <a href="#" class="add-product">Tilføj til kurv</a>
                             </div>
                         </div>
                     </div>
 
                     <div class="cupcake-card guac-col-4">
                         <div class="cupcake-imgBox">
-                            <img src="../static/images/products/cupcake-2.png" alt="Chokolade cupcake">
+                            <img src="../static/images/products/cupcake-4.png" alt="Chokolade cupcake">
                         </div>
                         <div class="cupcake-contentBox">
                             <h2>Chokolade Cupcake</h2>
                             <div class="cupcake-hoverContent">
                             <p class="cupcake-desc guac-pt-3">Beskrivelse her broski lol.. Hader livet.</p>
-                            <p class="cupcake-price guac-pt-3">Pris: 25 kr.</p>
-                            <a href="#" class="add-product">Bestil</a>
+                            <p class="cupcake-price guac-pt-3">25 kr</p>
+                            <a href="#" class="add-product">Tilføj til kurv</a>
                             </div>
                         </div>
                     </div>
@@ -171,42 +171,42 @@
                     <!-- Row 2 -->
                     <div class="cupcake-card guac-col-4">
                         <div class="cupcake-imgBox">
-                            <img src="../static/images/products/cupcake-3.png" alt="Chokolade cupcake">
+                            <img src="../static/images/products/cupcake-10.png" alt="Chokolade cupcake">
                         </div>
                         <div class="cupcake-contentBox">
                             <h2>Cupcake Title</h2>
                             <div class="cupcake-hoverContent">
                             <p class="cupcake-desc guac-pt-3">Rig, lækker chokoladesmag med blød topping.</p>
-                            <p class="cupcake-price guac-pt-3">Pris: 25 kr.</p>
-                            <a href="#" class="add-product">Bestil</a>
+                            <p class="cupcake-price guac-pt-3">25 kr</p>
+                            <a href="#" class="add-product">Tilføj til kurv</a>
                             </div>
                         </div>
                     </div>
 
                     <div class="cupcake-card guac-col-4">
                         <div class="cupcake-imgBox">
-                            <img src="../static/images/products/cupcake-2.png" alt="Chokolade cupcake">
+                            <img src="../static/images/products/cupcake-6.png" alt="Chokolade cupcake">
                         </div>
                         <div class="cupcake-contentBox">
                             <h2>Cupcake Title</h2>
                             <div class="cupcake-hoverContent">
                             <p class="cupcake-desc guac-pt-3">Rig, lækker chokoladesmag med blød topping.</p>
-                            <p class="cupcake-price guac-pt-3">Pris: 25 kr.</p>
-                            <a href="#" class="add-product">Bestil</a>
+                            <p class="cupcake-price guac-pt-3">25 kr</p>
+                            <a href="#" class="add-product">Tilføj til kurv</a>
                             </div>
                         </div>
                     </div>
 
                     <div class="cupcake-card guac-col-4">
                         <div class="cupcake-imgBox">
-                            <img src="../static/images/products/cupcake-3.png" alt="Chokolade cupcake">
+                            <img src="../static/images/products/cupcake-7.png" alt="Chokolade cupcake">
                         </div>
                         <div class="cupcake-contentBox">
                             <h2>Cupcake Title</h2>
                             <div class="cupcake-hoverContent">
                             <p class="cupcake-desc guac-pt-3">Rig, lækker chokoladesmag med blød topping.</p>
-                            <p class="cupcake-price guac-pt-3">Pris: 25 kr.</p>
-                            <a href="#" class="add-product">Bestil</a>
+                            <p class="cupcake-price guac-pt-3">25 kr</p>
+                            <a href="#" class="add-product">Tilføj til kurv</a>
                             </div>
                         </div>
                     </div>
@@ -215,32 +215,77 @@
                     <!-- Row 3 -->
                     <div class="cupcake-card guac-col-4">
                         <div class="cupcake-imgBox">
-                            <img src="../static/images/products/cupcake-3.png" alt="Chokolade cupcake">
+                            <img src="../static/images/products/cupcake-11.png" alt="Chokolade cupcake">
                         </div>
                         <div class="cupcake-contentBox">
                             <h2>Cupcake Title</h2>
                             <div class="cupcake-hoverContent">
                             <p class="cupcake-desc guac-pt-3">Rig, lækker chokoladesmag med blød topping.</p>
-                            <p class="cupcake-price guac-pt-3">Pris: 25 kr.</p>
-                            <a href="#" class="add-product">Bestil</a>
+                            <p class="cupcake-price guac-pt-3">25 kr</p>
+                            <a href="#" class="add-product">Tilføj til kurv</a>
                             </div>
                         </div>
                     </div>
 
                     <div class="cupcake-card guac-col-4">
                         <div class="cupcake-imgBox">
-                            <img src="../static/images/products/cupcake-2.png" alt="Chokolade cupcake">
+                            <img src="../static/images/products/cupcake-9.png" alt="Chokolade cupcake">
                         </div>
                         <div class="cupcake-contentBox">
                             <h2>Cupcake Title</h2>
                             <div class="cupcake-hoverContent">
                             <p class="cupcake-desc guac-pt-3">Rig, lækker chokoladesmag med blød topping.</p>
-                            <p class="cupcake-price guac-pt-3">Pris: 25 kr.</p>
-                            <a href="#" class="add-product">Bestil</a>
+                            <p class="cupcake-price guac-pt-3">25 kr</p>
+                            <a href="#" class="add-product">Tilføj til kurv</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="cupcake-card guac-col-4">
+                        <div class="cupcake-imgBox">
+                            <img src="../static/images/products/cupcake-12.png" alt="Chokolade cupcake">
+                        </div>
+                        <div class="cupcake-contentBox">
+                            <h2>Cupcake Title</h2>
+                            <div class="cupcake-hoverContent">
+                            <p class="cupcake-desc guac-pt-3">Rig, lækker chokoladesmag med blød topping.</p>
+                            <p class="cupcake-price guac-pt-3">25 kr</p>
+                            <a href="#" class="add-product">Tilføj til kurv</a>
                             </div>
                         </div>
                     </div>
                     <!-- Row 3 -->
+
+                    <!-- Row 4 -->
+                    <div class="cupcake-card guac-col-4">
+                        <div class="cupcake-imgBox">
+                            <img src="../static/images/products/cupcake-14.png" alt="Chokolade cupcake">
+                        </div>
+                        <div class="cupcake-contentBox">
+                            <h2>Cupcake Title</h2>
+                            <div class="cupcake-hoverContent">
+                            <p class="cupcake-desc guac-pt-3">Rig, lækker chokoladesmag med blød topping.</p>
+                            <p class="cupcake-price guac-pt-3">25 kr</p>
+                            <a href="#" class="add-product">Tilføj til kurv</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="cupcake-card guac-col-4">
+                        <div class="cupcake-imgBox">
+                            <img src="../static/images/products/cupcake-13.png" alt="Chokolade cupcake">
+                        </div>
+                        <div class="cupcake-contentBox">
+                            <h2>Cupcake Title</h2>
+                            <div class="cupcake-hoverContent">
+                            <p class="cupcake-desc guac-pt-3">Rig, lækker chokoladesmag med blød topping.</p>
+                            <p class="cupcake-price guac-pt-3">25 kr</p>
+                            <a href="#" class="add-product">Tilføj til kurv</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Row 4 -->
 
                 </div>
                 <!-- Cupcake Menu End -->
