--- a/Visuals/templates/admin.html
+++ b/Visuals/templates/admin.html
@@ -13,8 +13,8 @@
     <title>Olsker Cupcakes</title>
 
     <!-- Icon -->
-    <link rel="icon" href="../static/images/icons/icon.svg" type="image/x-icon"> <!-- That little logo thats next to the title in URL -->
-    <link rel="apple-touch-icon" href="../static/images/icons/icon.svg">
+    <link rel="icon" href="../static/images/icons/cupcake-1.png" type="image/x-icon"> <!-- That little logo thats next to the title in URL -->
+    <link rel="apple-touch-icon" href="../static/images/icons/cupcake-1.png">
 
     <!-- CSS Load -->
     <link rel="stylesheet" href="../static/css/style.css">
