--- a/Visuals/templates/index.html
+++ b/Visuals/templates/index.html
@@ -27,6 +27,7 @@
     <!-- Script Load -->
     <script src="../static/js/button-to-top.js"></script>
     <script src="../static/js/notification.js"></script>
+    <script src="../static/js/showcase.js"></script>
 
     <!-- Modules -->
     <script type="module" src="../static/js/components/navbar.js" defer></script>
@@ -100,7 +101,7 @@
             <!-- Cupcake Showcase Start -->
             <div class="section-1-showcase guac-animate guac-zoom-in">
                 <div class="guac-col-auto showcase-item guac-animate guac-zoom-in-n-out1">
-                    <img src="../static/images/products/cupcake-2.png" alt="Showcase 1">
+                    <img src="../static/images/products/cupcake-1.png" alt="Showcase 1">
                     <h3>Honeybun Cherry</h3>
                     <p>Rig chokoladesmag med cremet topping og ekstra kærlighed.</p>
                 </div>
