--- a/Cupcake/src/main/resources/static/css/guacamoleboy-wow.css
+++ b/Cupcake/src/main/resources/static/css/guacamoleboy-wow.css
@@ -5,7 +5,7 @@
 
           Last edited by
            Guacamoleboy
-            10/09-2025
+            28/09-2025
 
 */
 
@@ -19,7 +19,7 @@
 }
 
 .guac-fade-in.guac-visible {
-    animation: guacFadeIn 1s forwards;
+    animation: guacFadeIn 0.7s forwards;
 }
 
 .guac-slide-up.guac-visible {
@@ -38,12 +38,25 @@
     animation: guacSlideInLeft 1s forwards;
 }
 
+.guac-slide-up.guac-visible {
+    animation: guacSlideUp 1s forwards;
+}
+
+.guac-slide-in-right.guac-visible {
+    animation: guacSlideRight 1s forwards;
+}
+
 .guac-bounce.guac-visible {
     animation: guacBounce 1s forwards;
 }
 
 .guac-zoom-in.guac-visible {
     animation: guacZoomIn 1s forwards;
+}
+
+.guac-zoom-in-n-out.guac-visible {
+    animation: guacZoomInNOut 0.5s forwards;
+    animation-delay: 1s; /* Waits for zoom-in to be done */
 }
 
 .guac-rotate.guac-visible {
@@ -68,6 +81,10 @@
 
 .guac-roll-right.guac-visible {
     animation: guacRollRight 1s forwards;
+}
+
+.guac-slide-out {
+    animation: guac-slide-out 1s forwards;
 }
 
 .guac-fade-slide-up.guac-visible {
@@ -137,6 +154,11 @@
     to { opacity: 1; transform: translateX(0); }
 }
 
+@keyframes guacSlideUp {
+    from { opacity: 0; transform: translateY(50px); }
+    to { opacity: 1; transform: translateY(0); }
+}
+
 @keyframes guacBounce {
     0% { transform: translateY(0); }
     20% { transform: translateY(0); }
@@ -149,6 +171,18 @@
 @keyframes guacZoomIn {
     from { opacity: 0; transform: scale(0.5); }
     to { opacity: 1; transform: scale(1); }
+}
+
+@keyframes guacZoomInNOut {
+    0% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(1.05);
+    }
+    100% {
+        transform: scale(1);
+    }
 }
 
 @keyframes guacRotate {
@@ -222,3 +256,14 @@
 }
 
 @keyframes spin { 100% { transform: rotate(360deg); } }
+
+@keyframes guac-slide-out {
+    0% {
+        transform: translateX(0);
+        opacity: 1;
+    }
+    100% {
+        transform: translateX(-100%);
+        opacity: 0;
+    }
+}
